# waylandclienttest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  waylandclient.kdev4  wl_exception.h
examples/: CMakeLists.txt  damage.c
myegl/: egl.cpp  egl.h  eglwindow.cpp  eglwindow.h
wl/: buffer.cpp  buffer.h  compositor.cpp  compositor.h  display.cpp  display.h  registry.cpp  registry.h  sharedmemory.cpp  sharedmemory.h  shell.cpp  shell.h  shellsurface.cpp  shellsurface.h  surface.cpp  surface.h
xdg/: surface.cpp  surface.h  toplevel.cpp  toplevel.h  wmbase.cpp  wmbase.h
xdg/unstable/: decorationmanager.cpp  decorationmanager.h  topleveldecoration.cpp  topleveldecoration.h
